ADD_LIBRARY(Aran
	Animation
	AranPCH
	ArnActions
	ArnAnim
	ArnBone
	ArnCamera
	ArnContainer
	ArnFile
	ArnHierarchy
	ArnIpo
	ArnLight
	ArnMaterial
	ArnMath
	ArnMesh
	ArnNode
	ArnNodeFactory
	ArnObject
	ArnSceneGraph
	ArnSkeleton
	ArnXformable
	Character
	CharacterAnimationCallback
	CharacterInterface
	DungeonInterface
	InputMan
	Log
	LoiterCallback
	ModelReader
	PreciseTimer
	RenderLayer
	Renderer
	ResourceMan
	Structs
	UndefinedCallback
	VideoMan
	WalkCallback
	)

