CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(pymparser)
SET(PYMPARSER_SOURCES 
PymCmdLineParser.cpp
TrajParser.cpp
)
SET(PYMPARSER_HEADERS
../PymPch.h
PymParserPch.h
PymCmdLineParser.h
TrajParser.h
)
INCLUDE_DIRECTORIES(
..
../core
${BOOST_ROOT}
${PYM_3RDPARTIES_ROOT}include
${PYM_3RDPARTIES_ROOT}CHOLMOD/Include
${PYM_3RDPARTIES_ROOT}libconfig-1.3.2
${PYM_3RDPARTIES_ROOT}glew-1.5.7/include
${MOSEK_ROOT}6/tools/platform/win32x86/h
)
LINK_DIRECTORIES(
${PYM_3RDPARTIES_ROOT}lib
${PYM_3RDPARTIES_ROOT}libconfig-1.3.2/Debug
${PYM_3RDPARTIES_ROOT}glew-1.5.7/lib
${MOSEK_ROOT}6/tools/platform/win32x86/bin
)
ADD_LIBRARY(pymparser SHARED ${PYMPARSER_SOURCES} ${PYMPARSER_HEADERS})
ADD_DEPENDENCIES(pymparser pymcore)
ADD_DEFINITIONS(-D_USRDLL -DPYMPARSER_EXPORTS)
