CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(pymcore)
SET(PYMCORE_SOURCES
PymCorePch.cpp
MathUtil.cpp 
MuscleFiber.cpp 
RigidBody.cpp 
PymJointAnchor.cpp 
PymPodUtil.cpp 
ConvexHullCapi.cpp
PymBiped.cpp 
PymuscleConfig.cpp 
StateDependents.cpp 
dRdv_real.cpp 
SymbolicTensor.cpp 
ExpBodyMoEq_real.cpp 
QuaternionEOM.cpp
)
SET(PYMCORE_HEADERS
../PymPch.h
PymCorePch.h
MathUtil.h 
MuscleFiber.h 
RigidBody.h 
PymJointAnchor.h 
PymPodUtil.h 
ConvexHullCapi.h
PymBiped.h 
PymuscleConfig.h 
StateDependents.h 
dRdv_real.h 
SymbolicTensor.h
ExpBodyMoEq_real.h
QuaternionEOM.h
)
INCLUDE_DIRECTORIES(
..
../../
../../AranMath
${BOOST_ROOT}
${PYM_3RDPARTIES_ROOT}include
${PYM_3RDPARTIES_ROOT}CHOLMOD/Include
${PYM_3RDPARTIES_ROOT}libconfig-1.3.2
${PYM_3RDPARTIES_ROOT}glew-1.5.7/include
${MOSEK_ROOT}6/tools/platform/win32x86/h
)
LINK_DIRECTORIES(
${PYM_3RDPARTIES_ROOT}lib
${PYM_3RDPARTIES_ROOT}libconfig-1.3.2/Debug
${PYM_3RDPARTIES_ROOT}glew-1.5.7/lib
${MOSEK_ROOT}6/tools/platform/win32x86/bin
)
ADD_LIBRARY(pymcore SHARED ${PYMCORE_SOURCES} ${PYMCORE_HEADERS})
TARGET_LINK_LIBRARIES(pymcore cholmod libconfig AranMath)
ADD_MSVC_PRECOMPILED_HEADER(pymcore PymCorePch.h PymCorePch.cpp)
